# Projects-C

./: GitLaba.docx  README.md  laba_4.c  laba_5.1.c  laba_5.2.c  laba_5.c  mergesort.py  sort.c  task_1.c  гойда 1
2 semester/programming/: lab_2.c  prog_1_lab.c  proga5.c
2 semester/programming/GitLaba/: GitLaba.docx  sort.c  ~$itLaba.docx
2 semester/programming/lab_3/: proga3.c  proga3.txt
2 semester/saod/: saod_1_lab.c  saod_1_lab_5.c  saod_1_lab_table.c
laba_10/: laba_10.c  laba_10_tinkoff_2.c
laba_10/laba_10_makefile/: Makefile  laba_10_header.h  laba_10_main.c  laba_10_other.c
laba_11/: laba_11.c  laba_11_backpack.c
laba_12/task0/: Makefile
laba_12/task1/background/: CMakeLists.txt
laba_12/task1/pipes/: CMakeLists.txt
laba_12/task2/: link
laba_2/: task_2.c  task_3.c
laba_3/: laba3.c
laba_5/: laba_5.1.c
laba_6/: laba_6.1.c  laba_6.2.c
laba_7/: Laba_7.c
laba_8/: laba_8.c  laba_8_5.c  laba_8_spiral.c
laba_9/: laba_9.c  laba_9.py  laba_9_recurse.c
